# ChangeLog for media-plugins/gst-plugins-libmms
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-libmms/ChangeLog,v 1.61 2011/12/05 11:27:45 pacho Exp $

  05 Dec 2011; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  Drop gnome team from metadata as talked with leio and eva.

  15 Oct 2011; Kacper Kowalik <xarthisius@gentoo.org>
  gst-plugins-libmms-0.10.22.ebuild:
  ppc/ppc64 stable wrt #382225

  11 Oct 2011; Jeroen Roovers <jer@gentoo.org>
  gst-plugins-libmms-0.10.22.ebuild:
  Stable for HPPA (bug #385703).

  09 Oct 2011; Raúl Porcel <armin76@gentoo.org>
  gst-plugins-libmms-0.10.22.ebuild:
  alpha/sparc stable wrt #382225

  03 Oct 2011; Jeroen Roovers <jer@gentoo.org>
  gst-plugins-libmms-0.10.22.ebuild:
  Marked ~hppa (bug #373639).

  25 Sep 2011; Tony Vroon <chainsaw@gentoo.org>
  gst-plugins-libmms-0.10.22.ebuild:
  Marked stable on AMD64 based on arch testing by Agostino "ago" Sarubbo &
  Tomáš "Mepho" Pružina in bug #382225.

  20 Sep 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  gst-plugins-libmms-0.10.22.ebuild:
  x86 stable wrt bug #382225

*gst-plugins-libmms-0.10.22 (29 Jul 2011)

  29 Jul 2011; Mart Raudsepp <leio@gentoo.org>
  +gst-plugins-libmms-0.10.22.ebuild:
  Version bump to be in sync with the rest; no code changes

  25 Jul 2011; Kacper Kowalik <xarthisius@gentoo.org>
  gst-plugins-libmms-0.10.21.ebuild:
  ppc/ppc64 stable wrt #368281

  05 Jun 2011; Raúl Porcel <armin76@gentoo.org>
  gst-plugins-libmms-0.10.21.ebuild:
  alpha/sparc stable wrt #368281

  23 May 2011; Markos Chandras <hwoarang@gentoo.org>
  gst-plugins-libmms-0.10.21.ebuild:
  Stable on amd64 wrt bug #368281

  23 May 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  gst-plugins-libmms-0.10.21.ebuild:
  x86 stable wrt bug #368281

*gst-plugins-libmms-0.10.21 (13 Apr 2011)

  13 Apr 2011; Mart Raudsepp <leio@gentoo.org>
  -gst-plugins-libmms-0.10.14.ebuild, -gst-plugins-libmms-0.10.17.ebuild,