@@ -1,10 +1,10 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-libvisual/gst-plugins-libvisual-0.10.35.ebuild,v 1.6 2012/04/16 03:38:27 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-libvisual/gst-plugins-libvisual-0.10.35.ebuild,v 1.7 2012/05/17 15:33:07 aballier Exp $
 
 inherit gst-plugins-base
 
-KEYWORDS="amd64 hppa ppc ppc64 x86"
+KEYWORDS="amd64 hppa ppc ppc64 x86 ~amd64-fbsd"
 IUSE=""
 
 RDEPEND=">=media-libs/libvisual-0.4
