@@ -1,6 +1,10 @@
 # ChangeLog for media-plugins/gst-plugins-libvisual
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-libvisual/ChangeLog,v 1.109 2012/04/16 03:38:27 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-libvisual/ChangeLog,v 1.110 2012/05/17 15:33:07 aballier Exp $
+
+  17 May 2012; Alexis Ballier <aballier@gentoo.org>
+  gst-plugins-libvisual-0.10.35.ebuild:
+  keyword ~amd64-fbsd
 
   16 Apr 2012; Jeroen Roovers <jer@gentoo.org>
   gst-plugins-libvisual-0.10.35.ebuild:
