@@ -1,6 +1,10 @@
 # ChangeLog for media-plugins/libvisual-plugins
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/libvisual-plugins/ChangeLog,v 1.53 2012/05/05 08:27:21 jdhore Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/libvisual-plugins/ChangeLog,v 1.54 2012/05/17 15:32:19 aballier Exp $
+
+  17 May 2012; Alexis Ballier <aballier@gentoo.org>
+  libvisual-plugins-0.4.0-r2.ebuild:
+  keyword ~amd64-fbsd
 
   05 May 2012; Jeff Horelick <jdhore@gentoo.org>
   libvisual-plugins-0.4.0-r2.ebuild:
