@@ -1,6 +1,10 @@
 # ChangeLog for media-plugins/gst-plugins-libmms
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-libmms/ChangeLog,v 1.61 2011/12/05 11:27:45 pacho Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-libmms/ChangeLog,v 1.62 2012/05/17 15:34:31 aballier Exp $
+
+  17 May 2012; Alexis Ballier <aballier@gentoo.org>
+  gst-plugins-libmms-0.10.22.ebuild:
+  keyword ~amd64-fbsd
 
   05 Dec 2011; Pacho Ramos <pacho@gentoo.org> metadata.xml:
   Drop gnome team from metadata as talked with leio and eva.
